--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-example1: output in chrome's console tab
-example2: better UI with one input box to send commands
+example2: output in chrome's console tab
+example: better UI with one input box to send commands
